fix menu line-height,LabelWrap

--- a/streamlit_antd_components/frontend/src/css/tabs.css
+++ b/streamlit_antd_components/frontend/src/css/tabs.css
@@ -8,6 +8,10 @@
     justify-content: center;
 }
 
-.ant-tabs-tab-btn{
+.ant-tabs-tab-btn {
     text-shadow: none !important;
+}
+
+.ant-tabs-nav {
+    margin: 0 !important;
 }
